add gradient and icon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="main wrapper clearfix">
 
                     <header>
+                        <img class="icon" src="images/icon_hand.svg" >
                         <h1>Giving to the Homeless</h1>
                         <p>We're doing some research around donating to Angelenos who are in need. Share your thoughts by taking our quick survey.</p>
                         <br/>
@@ -36,7 +37,10 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>This research project is run by a Hack for LA team. Learn more about <a href="http://www.hackforla.org/" target="_blank">Hack for LA.</a></h3>
+                <h3>This research project is run by a Hack for LA team. Learn more about <a href="http://www.hackforla.org/" target="_blank">Hack for LA.</a>
+                <br />
+                <em>Icon by lastspark (The Noun Project)</em>
+                </h3>
             </footer>
         </div>
 
