Add meta tags for social media

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--  Essential META Tags -->
+
+    <meta property="og:title" content="Spare App">
+    <meta property="og:description" content="Spare connects people in need of clothing and other essentials with people in the community who have things to spare.">
+    <meta property="og:image" content="https://www.whatcanyouspare.org/static/assets/tiles/donate/shirts@3x.png">
+    <meta property="og:url" content="https://www.whatcanyouspare.org">
+    <meta name="twitter:card" content="summary_large_image">
+
+
+    <!--  Non-Essential, But Recommended -->
+
+    <meta property="og:site_name" content="Spare App">
+    <meta name="twitter:image:alt" content="What Can You Spare?">
     <title>Spare</title>
   </head>
   <body>
