Update social image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
 
     <meta property="og:title" content="Spare App">
     <meta property="og:description" content="Spare connects people in need of clothing and other essentials with people in the community who have things to spare.">
-    <meta property="og:image" content="https://www.whatcanyouspare.org/static/assets/tiles/donate/shirts@3x.png">
+    <meta property="og:image" content="https://www.whatcanyouspare.org/static/assets/logos/socialimage_spare.png">
     <meta property="og:url" content="https://www.whatcanyouspare.org">
     <meta name="twitter:card" content="summary_large_image">
 
